@@ -6,11 +6,14 @@ buildscript {
     }
     dependencies {
         //classpath 'com.android.tools.build:gradle:1.1.1'
-
+		classpath 'com.android.tools.build:gradle:1.5.0'
+		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+//org.gradle.jvmargs="-Xmx1024m -XX:MaxPermSize=512m -Xms512m"
 
 allprojects {
 
